tests/ValidProofs/existsE.fitch
|∃x.P(x)
|Q(d)
|---
||[c]
||---
||Q(d) (R) 2
|Q(d) (∃E) 1, 3-4