tests/InvalidRules/existsE%5.fitch
|∃x.P(x)
|---
||[c]
||P(d)
||---
||P(d) (R) 3
|P(d) (∃E) 1, 2-4
